syntax = "proto3";

package api.course.service.v1;

option go_package = "edupls/api/course/service/v1;v1"; 

service Course {
	rpc CreateCourse (CreateCourseRequest) returns (CreateCourseReply);
	rpc UpdateCourse (UpdateCourseRequest) returns (UpdateCourseReply);
	rpc DeleteCourse (DeleteCourseRequest) returns (DeleteCourseReply);
	rpc GetCourse (GetCourseRequest) returns (GetCourseReply);
	rpc ListCourse (ListCourseRequest) returns (ListCourseReply);
}

message CreateCourseRequest {}
message CreateCourseReply {}

message UpdateCourseRequest {}
message UpdateCourseReply {}

message DeleteCourseRequest {}
message DeleteCourseReply {}

message GetCourseRequest {}
message GetCourseReply {}

message ListCourseRequest {}
message ListCourseReply {}